--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 I enjoy tackling complex challenges and delivering clean, well-structured code. I’m always eager to learn new technologies and improve my skills, aiming to build seamless user experiences and robust solutions.</p>
         </div>
         <div class="w-1/2 max-sm:mt-4">
-            <img src="/public/Srithar.jpg" class="w-4/5 h-full mx-auto" height="400px" alt="profile">
+            <img src="./public/Srithar.jpg" class="w-4/5 h-full mx-auto" height="400px" alt="profile">
         </div>
      </section>
      <!-- project section -->
@@ -55,7 +55,7 @@
         <div class="container flex justify-center my-2 max-md:flex-wrap">
             <div class="w-[400px] h-[450px] bg-gray-200 mx-4 rounded-lg m-2">
                 <div >
-                    <img src="/public/college.jpg" class="w-full h-[200px] rounded hover:cursor-pointer" alt="project-img" id="plink-1">
+                    <img src="./public/college.jpg" class="w-full h-[200px] rounded hover:cursor-pointer" alt="project-img" id="plink-1">
                 </div>
                 <div>
                     <a href="https://github.com/Srithar407/Final_year_project" target="_blank" id="plink_1">
@@ -66,7 +66,7 @@
             </div>
             <div class="w-[400px] h-[450px] bg-gray-200 mx-4 rounded-lg m-2">
                 <div >
-                    <img src="/public/chat_bot.jpg" class="w-full h-[200px] rounded hover:cursor-pointer" alt="project-img" id="plink-2">
+                    <img src="./public/chat_bot.jpg" class="w-full h-[200px] rounded hover:cursor-pointer" alt="project-img" id="plink-2">
                 </div>
                 <div>
                     <a href="https://productivity-apps-bot.vercel.app/" target="_blank" id="plink_2">
@@ -82,43 +82,43 @@
         <h2 class="text-2xl font-bold text-center my-4" id="skills">SKILLS</h2>
         <div class="grid grid-cols-4 gap-4 max-md:grid-cols-2 max-sm:grid-cols-1 max-lg:grid-cols-3">
             <div class="w-[250px] h-[300px] bg-gray-100 p-4 rounded-lg">
-                <img src="/public/java.png" class="w-[250px] h-[200px] " alt="skill_badge">
+                <img src="./public/java.png" class="w-[250px] h-[200px] " alt="skill_badge">
                 <p class="text-2xl font-bold text-center mt-4 text-emerald-900">Java</p>
             </div>
             <div class="w-[250px] h-[300px] bg-gray-100 p-4 rounded-lg">
-                <img src="/public/python.jpeg" class="w-[250px] h-[200px]" alt="skill_badge">
+                <img src="./public/python.jpeg" class="w-[250px] h-[200px]" alt="skill_badge">
                 <p class="text-2xl font-bold text-center mt-4 text-emerald-900">Python</p>
             </div>
             <div class="w-[250px] h-[300px] bg-gray-100 p-4 rounded-lg">
-                <img src="/public/js.png" class="w-[250px] h-[200px]"  alt="skill_badge">
+                <img src="./public/js.png" class="w-[250px] h-[200px]"  alt="skill_badge">
                 <p class="text-2xl font-bold text-center mt-4 text-emerald-900">Java Script</p>
             </div>
             <div class="w-[250px] h-[300px] bg-gray-100 p-4 rounded-lg">
-                <img src="/public/react.png" class="w-[250px] h-[200px]" alt="skill_badge">
+                <img src="./public/react.png" class="w-[250px] h-[200px]" alt="skill_badge">
                 <p class="text-2xl font-bold text-center mt-4 text-emerald-900">React</p>
             </div>
             <div class="w-[250px] h-[300px] bg-gray-100 p-4 rounded-lg">
-                <img src="/public/next.png" class="w-[250px] h-[200px] " alt="skill_badge">
+                <img src="./public/next.png" class="w-[250px] h-[200px] " alt="skill_badge">
                 <p class="text-2xl font-bold text-center mt-4 text-emerald-900">Nextjs</p>
             </div>
             <div class="w-[250px] h-[300px] bg-gray-100 p-4 rounded-lg">
-                <img src="/public/html.png" class="w-[250px] h-[200px]"  alt="skill_badge">
+                <img src="./public/html.png" class="w-[250px] h-[200px]"  alt="skill_badge">
                 <p class="text-2xl font-bold text-center mt-4 text-emerald-900">HTML</p>
             </div>
             <div class="w-[250px] h-[300px] bg-gray-100 p-4 rounded-lg">
-                <img src="/public/css.png" class="w-[250px] h-[200px]"  alt="skill_badge">
+                <img src="./public/css.png" class="w-[250px] h-[200px]"  alt="skill_badge">
                 <p class="text-2xl font-bold text-center mt-4 text-emerald-900">CSS</p>
             </div>
             <div class="w-[250px] h-[300px] bg-gray-100 p-4 rounded-lg">
-                <img src="/public/tailwind.jpeg" class="w-[250px] h-[200px]" alt="skill_badge">
+                <img src="./public/tailwind.jpeg" class="w-[250px] h-[200px]" alt="skill_badge">
                 <p class="text-2xl font-bold text-center mt-4 text-emerald-900">Tailwind</p>
             </div>
             <div class="w-[250px] h-[300px] bg-gray-100 p-4 rounded-lg">
-                <img src="/public/spring.png" class="w-[250px] h-[200px]"  alt="skill_badge">
+                <img src="./public/spring.png" class="w-[250px] h-[200px]"  alt="skill_badge">
                 <p class="text-2xl font-bold text-center mt-4 text-emerald-900">Spring Boot</p>
             </div>
             <div class="w-[250px] h-[300px] bg-gray-100 p-4 rounded-lg">
-                <img src="/public/mysql.png" class="w-[250px] h-[200px]" alt="skill_badge">
+                <img src="./public/mysql.png" class="w-[250px] h-[200px]" alt="skill_badge">
                 <p class="text-2xl font-bold text-center mt-4 text-emerald-900">MySQL</p>
             </div>
         </div>
@@ -128,7 +128,7 @@
             <h2 class="text-2xl font-bold text-center my-4" id="experience">EXPERIENCE</h2>
             <div class="flex max-sm:flex-col">
                 <div class="p-4 bg-slate-50 rounded-lg max-sm:mb-4">
-                    <img src="/public/xzect-logo.svg" class="w-[100px] h-[100px]" alt="intern">
+                    <img src="./public/xzect-logo.svg" class="w-[100px] h-[100px]" alt="intern">
                     <h2 class="text-xl font-bold text-left mt-4">Fullstack developer intern</h2>
                     <h3 class="text-xl font-medium text-gray-400">Jun 2024 - Aug 2024 </h3>
                     <p class="text-lg w-[300px] text-gray-400">Xzect Labs Pvt Ltd, New Dhelhi</p>
