--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 I enjoy tackling complex challenges and delivering clean, well-structured code. I’m always eager to learn new technologies and improve my skills, aiming to build seamless user experiences and robust solutions.</p>
         </div>
         <div class="w-1/2 max-sm:mt-4">
-            <img src="./public/srithar.jpg" class="w-4/5 h-full mx-auto" height="400px" alt="profile">
+            <img src="./public/srithar.jpg" class="w-4/5 h-full mx-auto max-sm:w-full" height="400px" alt="profile">
         </div>
      </section>
      <!-- project section -->
